--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
+body {
+	color: white;
+	background-color: black;
+}
+
 .board {
 	width: 500px;
 	height: 500px;
 	display: grid;
-	/* border-style: solid;
-	border-color: black; */
 }
