--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,15 @@
 body {
 	color: white;
-	background-color: black;
+	background-color: gray;
+}
+
+.flex-container {
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .board {
@@ -9,17 +18,16 @@ body {
 	display: grid;
 }
 
-.flex-container {
+.buttons,
+.mode,
+.board-size,
+.error {
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 
-.buttons,
-.mode,
-.board-size {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.error {
+	display: none;
 }
+
